# AMR-Tactical-SLAM

./: .gitignore  README.md  debug_map.ply  diagnostic_map.ply  pro_map.ply  run_slam_demo.sh
mapas_ply/: auto_calibrated_map.ply  clean_map.ply  correct_map.ply  diagnostic_no_rotation.ply  final_map_3d.ply  robust_map.ply  rtk_direct_map.ply  rtk_map.ply  rtk_motion_map.ply  slam_map.ply
path_planning_autonomusNav/lidar_rtk_nav/: package.xml  setup.cfg  setup.py
path_planning_autonomusNav/lidar_rtk_nav/launch/: autonomous_nav.launch.py  autopilot.launch.py  mission.launch.py  navigation.launch.py  tactical_nav.launch.py
path_planning_autonomusNav/lidar_rtk_nav/lidar_rtk_nav/: controller_dashboard.py  mission_planner_gui.py  mission_planner_satellite.py  motion_simulator.py  path_generator_node.py  pure_pursuit_controller.py  static_map_server.py  tactical_autopilot.py  tactical_mission_control.py  trajectory_tracker.py  waypoint_collector.py  web_dashboard.py
src/lidar_rtk_slam/: package.xml  setup.cfg  setup.py
src/lidar_rtk_slam/config/: slam_params.yaml
src/lidar_rtk_slam/launch/: rtk_direct_slam.launch.py  slam_offline.launch.py  slam_pro_dashboard.launch.py  slam_professional.launch.py
src/lidar_rtk_slam/lidar_rtk_slam/: __init__.py  lidar_preprocessing_node.py  loop_closure_node.py  map_builder_node.py  rtk_direct_map_builder.py  rtk_preprocessing_node.py  rtk_slam_fusion_node.py  satellite_navigation_node.py  scan_matching_node.py  tf_broadcaster_node.py  viz_3d_node.py  web_bridge_node.py
src/lidar_rtk_slam/rviz/: mission_control.rviz  slam_pro.rviz  (+2 more)
src/lidar_rtk_tools/: CMakeLists.txt  package.xml
src/lidar_rtk_tools/scripts/: mat_to_rosbag2.py
src/rviz/: slam_pro.rviz
(+3 files in other folders)
